# lithos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DEMO.md  LICENSE.md  Makefile  README.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  publish-agent-skills.yml  pypi.yml  review-agent-skills.yml
.ralph/: ralph++.yaml
agent-skills/: .gitignore  tessl.json
agent-skills/.cursor/skills/: tessl__influx-inbox
agent-skills/.github/skills/: tessl__lithos
agent-skills/.tessl/plugins/agent-lore/influx-inbox/: tessl-package.json
agent-skills/.tessl/plugins/agent-lore/influx-inbox/.tessl-plugin/: plugin.json
agent-skills/.tessl/plugins/agent-lore/lithos/: tessl-package.json
agent-skills/.tessl/plugins/local/influx-inbox/: tessl-package.json
agent-skills/.tessl/plugins/local/lithos/: tessl-package.json
agent-skills/plugins/influx-inbox/.tessl-plugin/: plugin.json
agent-skills/plugins/influx-inbox/skills/influx-inbox/: SKILL.md
agent-skills/plugins/lithos/.tessl-plugin/: plugin.json
agent-skills/plugins/lithos/skills/lithos/: SKILL.md
docker/: Dockerfile  docker-compose.yml  run.sh
docs/: SPECIFICATION.md  architecture.toml  cli.md  lcma-design.md  mcp-roadmap-alignment.md  otel-plan.md
docs/adr/: 0001-reconciliation-lives-on-knowledge-manager.md  0002-search-engine-hides-its-backends.md  0003-corpus-intake.md  0004-provenance-projection-module.md  0005-cognitive-memory-module.md  0006-edges-db-authoritative-for-asserted-edges.md  0007-watch-intake.md  0008-entity-extraction-ner-and-provenance.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/plans/: bulk-write-v3.md  bulk-write.md  cli-admin-client-split.md  cli-extension-plan.md  digest-auto-link-v2.md  event-bus-plan.md  event-delivery-plan.md  event-guaranteed-delivery-plan.md  event-system-plan.md  final-architecture-guardrails.md  future-improvements.md  implementation-checklist.md  lcma-checklist.md  lcma-design.md  otel-plan.md  research-cache-plan.md  seam-tightening-search.md  source_url-dedup.md  task-graph-coordination-extension.md  unified-write-contract.md
docs/plans/archive/: event-system-plan.md
docs/plans/deferred/: bulk-write-v3.md  event-webhooks-plan.md
presentation/: lithos-intro-presentation.md  research-cache-copy.md
scripts/: calibrate_salience.py  metrics_diff.py  metrics_history.py
scripts/ralph/: .last-branch  .run-counters  prd.json  progress.txt
scripts/ralph/archive/2026-04-12-lcma-mvp1-4d50/: prd.json
scripts/ralph/archive/2026-04-13-mvp2-02-reinforcement/: prd.json  progress.txt
scripts/ralph/archive/2026-04-13-mvp2-03-scouts/: prd.json  progress.txt
scripts/ralph/archive/2026-04-13-mvp2-04-contradictions/: prd.json
src/exogram/: cli.py  config.py  coordination.py  graph.py  knowledge.py  search.py  server.py
src/lithos/: _merge.py  async_sqlite_store.py  cli.py  cli_reconcile.py  cognitive_memory.py  config.py  coordination.py  corpus_index.py  edge_store.py  envelopes.py  errors.py  events.py  frontmatter_codec.py  graph.py  intake.py  knowledge.py  logging_config.py  pipeline.py  provenance.py  reconcile.py  search.py  server.py  telemetry.py  watch_intake.py
src/lithos/lcma/: __init__.py  edge_reinforce.py  edges.py  enrich.py  entities.py  migrations.py  reinforcement.py  retrieve.py  salience.py  scouts.py  stats.py
src/lithos/tools/: __init__.py  _seam.py  agents.py  findings_stats.py  memory_edges.py  notes.py  read_search.py  tasks.py
tasks/: prd.json  progress.txt
tests/: conftest.py  helpers.py  test_async_search.py  test_audit_log.py  test_calibrate_salience.py  test_cli.py  test_cli_contract.py  test_cli_reconcile.py  test_coactivation.py  test_codec_conformance.py  test_cognitive_memory.py  test_config.py  test_conflict_resolve.py  test_coordination.py  test_corpus_index.py  test_edge_tools.py  test_edges.py  test_embedding_async.py  test_enrich_worker.py  test_entities.py  test_envelope_boundary.py  test_envelope_conformance.py  test_envelopes.py  test_event_bus.py  test_event_delivery.py  test_event_emission.py  test_file_watcher_events.py  test_freshness_conformance.py  test_graph.py  test_graph_cache_debounce.py  test_graph_conformance.py  test_graph_reconcile.py  test_indexable_document.py  test_intake.py  test_integration_conformance.py  test_integration_mcp_sse.py  test_knowledge.py  test_lcma_config.py  test_lcma_frontmatter.py  test_lcma_retrieve_integration.py  (+27 more)
tests/guardrail/: AGENTS.md  _common.py  _component_pages.py  _containers.py  _diagram_toolkit.py  _index.py  _metrics_render.py  _metrics_toolkit.py  _private_access.py  _tool_catalog.py  conftest.py  test_architecture_diagram.py  test_component_pages.py  test_container_diagram.py  test_domain_model_diagram.py  test_generated_index.py  test_generated_manifest.py  test_layering_contract.py  test_metrics_snapshot.py  test_tool_catalog.py
(+9 files in other folders)
