[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lithos-mcp"
version = "0.3.3"
description = "Shared cognitive substrate for AI agents (local-first, Markdown-native, MCP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dave Snowdon" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "tantivy>=0.22.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.2",  # edges= kwarg in node_link_data/node_link_graph requires >=3.2
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.17.0",
    "click>=8.0.0",
    "python-json-logger>=3.0",
    "spacy>=3.8",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]

[project.scripts]
lithos = "lithos.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    # spaCy NER model — kept OUT of [project.dependencies] because it is a
    # direct-URL reference, which PyPI rejects on upload (`400 Can't have direct
    # dependency`). It is not on PyPI. Here in the dev group, `uv sync` installs
    # it for development/CI; production images install it explicitly (see
    # docker/Dockerfile), and at runtime lithos downloads it on first NER use
    # (lithos.lcma.entities), falling back to heuristic extraction if offline.
    # Bump the pinned version alongside the spacy minor version.
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "grimp>=3.14",
    "import-linter>=2.12",
]

[tool.hatch.metadata]
# Allow the dev-group's direct wheel URL (en-core-web-sm) during local/editable
# builds. The published distribution carries no direct-URL deps (PyPI forbids
# them); this only affects local `uv sync`/editable installs.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lithos"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lithos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.importlinter]
# Directional architecture contract: dependencies must only point downward,
# Entrypoints -> Core -> Foundation. Expressed as `forbidden` contracts (not
# `layers`) because some core modules legitimately import each other
# (e.g. graph <-> knowledge), which a strict layers contract would reject.
# The lithos.lcma seam is guarded separately by tests/test_module_boundaries.py.
root_package = "lithos"

[[tool.importlinter.contracts]]
name = "Foundation must not import Core or Entrypoints"
type = "forbidden"
source_modules = [
    "lithos.config",
    "lithos.telemetry",
    "lithos.errors",
    "lithos.events",
    "lithos._merge",
    "lithos.edge_store",
    "lithos.logging_config",
]
forbidden_modules = [
    "lithos.knowledge",
    "lithos.reconcile",
    "lithos.search",
    "lithos.graph",
    "lithos.coordination",
    "lithos.intake",
    "lithos.provenance",
    "lithos.cognitive_memory",
    "lithos.lcma",
    "lithos.cli",
    "lithos.server",
    "lithos.watch_intake",
]

[[tool.importlinter.contracts]]
name = "Core must not import Entrypoints"
type = "forbidden"
source_modules = [
    "lithos.knowledge",
    "lithos.reconcile",
    "lithos.search",
    "lithos.graph",
    "lithos.coordination",
    "lithos.intake",
    "lithos.provenance",
    "lithos.cognitive_memory",
    "lithos.lcma",
]
forbidden_modules = [
    "lithos.cli",
    "lithos.server",
    "lithos.watch_intake",
]

[tool.pytest.ini_options]
# asyncio_mode = "auto" means pytest-asyncio decorates every async test
# function automatically — @pytest.mark.asyncio decorators are not required.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring integration environment or broader subsystem coverage",
]
